# sar_simulation

./: .gitmodules  README.md
_sar_projects_1/: Analytical_Optical_Flow_2.py  G_rp_matrix.csv
sar_config/: Base_Settings.yaml  Base_Settings_Bryan.yaml  Model_Types.yaml  Model_Types_Bryan.yaml  Sim_Settings.yaml
sar_control/: CMakeLists.txt
sar_control/include/: Controller_GTC.h  ML_Funcs.h  Shared_Lib.h  Traj_Funcs.h  nml_util.h  stabilizer.h
sar_control/src/: Controller_GTC.cpp  Shared_Lib.cpp  Traj_Funcs.cpp  stabilizer.cpp
sar_data_converter/: CMakeLists.txt
sar_data_converter/include/: Gazebo_Funcs.h  SAR_DataConverter.h
sar_data_converter/src/: Data_Parsing.cpp  Data_Summary.cpp  Debug_Console.cpp  Gazebo_Funcs.cpp  Logging_Funcs.cpp  SAR_DataConverter.cpp  SAR_DataConverter_Exp.cpp  SAR_DataConverter_Sim.cpp
sar_env/: SAR_Base_Interface.py  SAR_Sim_Interface.py
sar_gazebo/: CMakeLists.txt  package.xml  practice.sdf  robot.sdf  robot1.sdf  robot_5.sdf
sar_gazebo/models/: robot1.sdf
sar_gazebo/models/Crazyflie/Configs/A30_L25/: model.sdf
sar_gazebo/models/Crazyflie/Configs/A30_L70/: model.sdf  model_ori.sdf
sar_gazebo/models/Crazyflie_DH/Configs/A30_L25/: model.sdf
sar_gazebo/models/Crazyflie_DH/SAR_Base/: model.sdf
sar_gazebo/models/Ground_Surface/Configs/Desert_Pattern/: model.sdf
sar_gazebo/models/Ground_Surface/Ground_Base_Model/: model.sdf
sar_gazebo/models/Impulse_Micro/Configs/A30_L150/: model.sdf
sar_gazebo/models/Landing_Surface/Configs/Checkerboard_L02/: model.sdf
sar_gazebo/models/Landing_Surface/Plane_Base_Model/: model.sdf
sar_gazebo/models/Source_One_V5/Configs/A15_L250/: model (copy).sdf  model.sdf
sar_gazebo/models/Source_One_V5/Configs/A30_L200/: model.sdf  model_editing.sdf
sar_gazebo/models/Source_One_V5/Leg_Assemblies/meshes/: Leg_Assembly_1.STL  Leg_Assembly_2.STL  Leg_Assembly_DH.STL  Leg_Foot_DH.STL
sar_gazebo/models/Source_One_V5/SAR_Base/: model.sdf
sar_gazebo/models/Source_One_V5/SAR_Base/meshes/: JeVois_A33.STL
sar_gazebo/plugins/include/: Basic.h  Camera_Plugin.h  Contact_Plugin.h  Imu_Plugin.h  Motor_Plugin.h  Practice.h  Rolling_Shutter_Plugin.h  Set_Velocity_Plugin.h  Step_World_Plugin.h  Sticky_Leg_Plugin.h  Vicon_Plugin.h
sar_gazebo/plugins/src/: Basic.cpp  Camera_Plugin.cpp  Contact_Plugin.cpp  Imu_Plugin.cpp  Motor_Plugin.cpp  Practice.cpp  Rolling_Shutter_Plugin.cpp  Set_Velocity_Plugin.cpp  Step_World_Plugin.cpp  Sticky_Leg_Plugin.cpp  Vicon_Plugin.cpp
sar_gazebo/plugins/src/Failed/: Step_World_Plugin.cpp
sar_gazebo/worlds/: empty.world  empty2.world
sar_general/: 02.11PolicyPerformance_Data_Tau_DH_CenterHigh_DLR[2-4]_Result.csv  02.123obs.csv  02.12PolicyPerformance_Data_Tau_DH_FrontMiddle_DLR[2-4]_Result.csv  75deg.csv  CMakeLists.txt  PolicyPerformance_Data_0.27.csv  PolicyPerformance_Data_0.29.csv  PolicyPerformance_Data_Tau_CR_0.255.csv  PolicyPerformance_Data_Tau_CR_DLR[2-4] (another copy).csv  PolicyPerformance_Data_Tau_CR_DLR[2-4].csv  PolicyPerformance_Data_Tau_DH_DLR[2-4].csv  PolicyPerformance_Data_Tau_DH_Frontmiddle_DLR[2-4]_Result.csv  Reliable.csv
sar_general/data/: PolicyPerformance_Data_0.27_Tau_CR.csv  PolicyPerformance_Data_0.3(camera origin).csv  PolicyPerformance_Data_Tau_DH_DLR[2-4].csv
sar_general/scripts/: Control_Playground.py  Plot.py  Tau_CRvsTau_CM.py  Test_Performance.py  camera.py  graph video.py  opticalflow_accuracy_pattern.py  plot_performance.py
sar_launch/: world.sdf
sar_launch/launch/: Gazebo_sim.launch.py
sar_logging/local_logs/: Control_Playground--trial_24--A15_L250.csv  OFA[3.50,90.00]12.csv  OFA[3.50,90.00]128.csv  OFA[3.50,90.00]16.csv  OFA[3.50,90.00]32.csv  OFA[4.00,90.00]16.csv
sar_msgs/: CMakeLists.txt
sar_msgs/msg/: CtrlData.msg  OpticalFlowData.msg  ROSParams.msg  SARImpactData.msg  SARTriggerData.msg  StickyPadConnect.msg
sar_msgs/srv/: ActivateStickyPads.srv  CTRLCmdSrv.srv  CTRLGetObs.srv  CTRLGetTcon.srv  PadConnections.srv  WorldStep.srv
sar_project/: Analytical_Optical_Flow.cpp  Analytical_Optical_Flow.py  G_tp_matrix.csv  G_up_matrix.csv  y_vector.csv
sar_projects/: Analytical_Optical_Flow.cpp  CMakeLists.txt  Chessboard pattern generator.py  SAR_Sim_DeepRL.py  camera calibration.py  cur_img.csv  package.xml
sar_projects/DeepRL/: RL_Manager.py  T1_Policy_Pre-Training.py  T2_Policy_FineTuning.py
sar_projects_1/: Analytical_Optical_Flow  Analytical_Optical_Flow.py  X_matrix.csv  prev_img.csv
(+525 files in other folders)
